--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,23 +5,45 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background-color: $main-color;
+  background-color: transparent;
+
 
   .background__container {
     position: relative;
     display: flex;
     justify-content: center;
-    height: 100%;
+    height: 200%;
     transform-style: preserve-3d;
-    z-index: 0;
+
+    background-color: none;
+
+
 
     .background {
-      z-index: 0;
+      z-index: 100;
       position: absolute;
       animation: parralax 40s linear backwards infinite;
+      background-image: url(./../../img/bg-progressive2.jpeg);
+      width: 110%;
+      height: 110vh;
+
+      background-size: cover;
+      background-position-x: center;
+      background-position-y: top;
+      background-attachment: scroll;
+      background-repeat: no-repeat;
+      overflow: visible;
 
       @include mobile-only {
+        width: 200%;
+        height: 100vh;
         animation: parralax-mobile 40s linear backwards infinite;
+        background-size: cover;
+        background-position-x: center;
+        background-position-y: top;
+        background-attachment: scroll;
+        background-repeat: no-repeat;
+        overflow: visible;
 
       }
     }
