--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,13 +42,13 @@
     transform: translateZ(0px) translateX(0px) translateY(0px);
   }
   25% {
-    transform: translateZ(250px) translateX(100px) translateY(0px);
+    transform: translateZ(150px) translateX(100px) translateY(0px);
   }
   50% {
     transform: translateZ(0px) translateX(-40px) translateY(-100px);
   }
   75% {
-    transform: translateZ(250px) translateX(-125px) translateY(50px);
+    transform: translateZ(150px) translateX(-125px) translateY(50px);
   }
   100% {
     transform: translateZ(0px) translateX(0px) translateY(0px);
@@ -260,11 +260,16 @@ html {
 }
 
 body {
+  background-color: #d2c4b0;
+}
+
+main {
   box-sizing: border-box;
   overflow-x: hidden;
-  background-color: transparent;
   position: relative;
   z-index: 0;
+  max-width: 2000px;
+  margin: auto;
 }
 
 ul {
@@ -793,8 +798,8 @@ a:hover {
 .nav {
   display: flex;
   background-color: rgba(0, 0, 0, 0.5490196078);
-  height: 70px;
   top: 60px;
+  height: 70px;
   width: 100%;
   transition: all 0.4s cubic-bezier(0, 0.54, 0.13, 0.99);
 }
@@ -830,11 +835,11 @@ a:hover {
 .nav--scrolled {
   background-color: rgb(0, 0, 0);
   position: fixed;
-  width: 100%;
   top: 0px;
   z-index: 1;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.377);
   transition: all 0.4s cubic-bezier(0, 0.54, 0.13, 0.99);
+  max-width: 2000px;
 }
 @media screen and (max-width: 700px) {
   .nav--scrolled {
