--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,13 +13,16 @@ html {
 }
 
 body {
+  background-color: darken($color: $main-color, $amount: 5%);
+}
+
+main {
   box-sizing: border-box;
   overflow-x: hidden;
-  background-color: transparent;
   position: relative;
   z-index: 0;
-  
-  
+  max-width: 2000px;
+  margin: auto;
 }
 
 ul {
