--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,8 +186,19 @@
   0% {
     opacity: 0;
   }
-  75% {
+  30% {
+    opacity: 0;
+  }
+  100% {
     opacity: 1;
+  }
+}
+@keyframes opacity-skills-about {
+  0% {
+    opacity: 0;
+  }
+  66% {
+    opacity: 0;
   }
   100% {
     opacity: 1;
@@ -244,6 +255,38 @@
   }
   100% {
     transform: translateY(-50%) scale(0.5);
+  }
+}
+@keyframes cover-skills {
+  0% {
+    width: 0;
+    left: 0;
+  }
+  44% {
+    width: 100%;
+    left: 0;
+  }
+  54% {
+    width: 100%;
+    left: 0;
+  }
+  100% {
+    width: 0;
+    left: 100%;
+  }
+}
+@keyframes reveal-text {
+  0% {
+    opacity: 0;
+  }
+  44% {
+    opacity: 0;
+  }
+  54% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
   }
 }
 *,
@@ -1207,7 +1250,8 @@ form .form-containers select {
 form .form-containers label {
   max-width: 250px;
 }
-form .form-containers input, form .form-containers textarea {
+form .form-containers input,
+form .form-containers textarea {
   background-color: transparent;
   border: none;
   padding: 0px 5px;
@@ -1215,7 +1259,8 @@ form .form-containers input, form .form-containers textarea {
   font-size: 1.7rem;
 }
 @media screen and (max-width: 1024px) {
-  form .form-containers input, form .form-containers textarea {
+  form .form-containers input,
+form .form-containers textarea {
     font-size: 1.36rem;
   }
 }
@@ -1270,6 +1315,16 @@ input[type=submit] {
 }
 input[type=submit]:hover {
   transform: translateY(-10%);
+  transition: 0.3s;
+}
+
+input[type=submit].success {
+  background-color: rgb(108, 161, 108);
+  transition: 0.3s;
+}
+
+input[type=submit].error {
+  background-color: red;
   transition: 0.3s;
 }
 
@@ -1370,32 +1425,49 @@ input[type=submit]:hover {
   padding-bottom: 20px;
   position: relative;
 }
+.container__skills .covers {
+  display: block;
+  position: absolute;
+  overflow: hidden;
+  width: 0%;
+  height: 100%;
+  background-color: black;
+}
+.container__skills H1 {
+  display: none;
+}
 @media screen and (max-width: 700px) {
-  .container__skills::before {
-    content: "SOFT SKILLS";
+  .container__skills H1 {
+    display: block;
+    opacity: 0;
     text-align: center;
     position: absolute;
+    width: 120PX;
+    font-family: times_sans_serifregular, sans-serif;
+    font-weight: 800;
+    font-size: 2.8rem;
+    font-style: normal;
+    color: #000000;
+    left: 0;
+    top: 0;
+  }
+  .container__skills .cover-soft {
+    display: block;
+    position: absolute;
+    overflow: hidden;
+    width: 120PX;
+    height: 95px;
     left: 65%;
     top: 75px;
-    max-width: 150px;
-    font-family: times_sans_serifregular, sans-serif;
-    font-weight: 800;
-    font-size: 2.8rem;
-    font-style: normal;
-    color: #000000;
   }
-  .container__skills::after {
-    content: "HARD SKILLS";
-    text-align: center;
+  .container__skills .cover-hard {
+    display: block;
     position: absolute;
+    overflow: hidden;
+    width: 120PX;
+    height: 95px;
     right: 65%;
     bottom: 75px;
-    max-width: 150px;
-    font-family: times_sans_serifregular, sans-serif;
-    font-weight: 800;
-    font-size: 2.8rem;
-    font-style: normal;
-    color: #000000;
   }
 }
 @media screen and (max-width: 700px) {
@@ -1602,6 +1674,10 @@ input[type=submit]:hover {
   opacity: 1;
   transition: opacity 0.2s ease-in;
   cursor: pointer;
+}
+
+strong {
+  color: #d62c1a;
 }
 
 #about__intro {
@@ -2032,7 +2108,7 @@ input[type=submit]:hover {
   transition: 0.3s ease-out;
 }
 .about__experiences .cards .card:hover .comments__position {
-  top: 30%;
+  top: 20%;
   transition: 0.3s ease-out;
 }
 .about__experiences .cards .card .cover {
@@ -2208,7 +2284,7 @@ input[type=submit]:hover {
   opacity: 1;
   position: relative;
   text-align: center;
-  transform: translateY(-200px);
+  transform: translateY(-300px);
 }
 #contacts__intro::after {
   content: " ";
@@ -2277,14 +2353,16 @@ input[type=submit]:hover {
   letter-spacing: 1px;
   color: #000000;
 }
-.contacts .contacts__info .grid__info p, .contacts .contacts__info .grid__info a {
+.contacts .contacts__info .grid__info p,
+.contacts .contacts__info .grid__info a {
   font-weight: 100;
   font-size: 1.7rem;
   color: #000000;
   transition: 0.3s ease;
 }
 @media screen and (max-width: 1024px) {
-  .contacts .contacts__info .grid__info p, .contacts .contacts__info .grid__info a {
+  .contacts .contacts__info .grid__info p,
+.contacts .contacts__info .grid__info a {
     font-size: 1.19rem;
   }
 }
