--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -252,8 +252,22 @@
     opacity: 0;
   }
 
-  75% {
+  30% {
+    opacity: 0;
+  }
+
+  100% {
     opacity: 1;
+  }
+}
+
+@keyframes opacity-skills-about {
+  0% {
+    opacity: 0;
+  }
+
+  66% {
+    opacity: 0;
   }
 
   100% {
@@ -324,5 +338,45 @@
 
   100% {
     transform: translateY(-50%) scale(0.5);
+  }
+}
+
+@keyframes cover-skills {
+  0% {
+    width: 0;
+    left: 0;
+  }
+
+  44% {
+    width: 100%;
+    left: 0;
+  }
+
+  54% {
+    width: 100%;
+    left: 0;
+  }
+
+  100% {
+    width: 0;
+    left: 100%;
+  }
+}
+
+@keyframes reveal-text {
+  0% {
+    opacity: 0;
+  }
+
+  44% {
+    opacity: 0;
+  }
+
+  54% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
