--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2168,6 +2168,44 @@ strong {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+}
+.about__dev p {
+  display: block;
+  max-width: 1000px;
+  max-height: 150px;
+  overflow-y: hidden;
+  transition: max-height 1s ease-in-out;
+}
+@media screen and (max-width: 1024px) {
+  .about__dev p {
+    max-height: 125px;
+  }
+}
+.about__dev p.toggle {
+  overflow-y: none;
+  max-height: 2000px;
+  transition: max-height 1s ease-in-out;
+}
+
+#readMore {
+  cursor: pointer;
+  opacity: 1;
+  position: absolute;
+  right: 10%;
+  bottom: -30px;
+  z-index: 1;
+  transition: opacity 1.3s ease-in-out;
+}
+
+#readLess {
+  cursor: pointer;
+  opacity: 0;
+  position: absolute;
+  right: 10%;
+  bottom: -30px;
+  z-index: 0;
+  transition: opacity 1.3s ease-in-out;
 }
 
 .popup {
@@ -2222,6 +2260,7 @@ strong {
 .popup p {
   font-size: 4rem;
   color: white;
+  max-height: 200px;
 }
 @media screen and (max-width: 700px) {
   .popup p {
