--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -505,8 +505,46 @@ strong {
 .about__dev {
   display: flex;
   flex-direction: column;
-
   align-items: center;
+  position: relative;
+
+  p {
+    display: block;
+    max-width: 1000px;
+    max-height: 150px;
+    overflow-y: hidden;
+    transition: max-height 1s ease-in-out;
+
+    @include tablet {
+      max-height: 125px;
+    }
+  }
+
+  p.toggle {
+    overflow-y: none;
+    max-height: 2000px;
+    transition: max-height 1s ease-in-out;
+  }
+}
+
+#readMore {
+  cursor: pointer;
+  opacity: 1;
+  position: absolute;
+  right: 10%;
+  bottom: -30px;
+  z-index: 1;
+  transition: opacity 1.3s ease-in-out;
+}
+
+#readLess {
+  cursor: pointer;
+  opacity: 0;
+  position: absolute;
+  right: 10%;
+  bottom: -30px;
+  z-index: 0;
+  transition: opacity 1.3s ease-in-out;
 }
 
 .popup {
@@ -518,6 +556,8 @@ strong {
   width: 820px;
   height: 100%;
   background-color: rgba(17, 17, 17, 0.404);
+
+
 
   @include tablet {
     width: 600px;
@@ -564,6 +604,7 @@ strong {
   p {
     font-size: 4rem;
     color: white;
+    max-height: 200px;
 
     @include mobile-only {
 
