--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -329,3 +329,64 @@ a {
     margin-top: 3px;
   }
 }
+
+
+
+//----------- projectss buttons -------------
+
+.proj-prev__buttons {
+  position: absolute;
+  bottom: -45;
+  left: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-bottom: 20px;
+  width: 100%;
+  background-color: darken($main-color, 3%);
+
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 30px;
+    background-color: $dark-color;
+    border-radius: 10px;
+    color: white;
+    transition: 0.3s;
+
+    &:hover {
+      transform: translateY(-5px);
+      -webkit-box-shadow: 0px 10px 13px -7px $dark-color, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+      box-shadow: 0px 10px 13px -7px $dark-color, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+    }
+
+    @include tablet {
+      width: 75px;
+      font-size: 1rem;
+    }
+
+    @include mobile-only {
+      width: 60px;
+      font-size: 0.8rem;
+    }
+
+
+  }
+
+  a:first-child {
+    background-color: $dark-text-color;
+
+    &:hover {
+
+      -webkit-box-shadow: 0px 10px 13px -7px $dark-text-color, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+      box-shadow: 0px 10px 13px -7px $dark-text-color, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+    }
+  }
+
+  button {
+    position: relative;
+
+  }
+}
