--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -336,7 +336,7 @@ a {
 
 .proj-prev__buttons {
   position: absolute;
-  bottom: -45;
+  bottom: -45px;
   left: 0;
   display: flex;
   justify-content: space-around;
